adding integration tests