@@ -16,6 +16,7 @@ import java.time.Instant;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 import static java.util.Objects.nonNull;
 
@@ -27,15 +28,9 @@ public class GlobalControllerAdvice extends ResponseEntityExceptionHandler {
                                                                   HttpHeaders headers,
                                                                   HttpStatus status, WebRequest request) {
         List<String> errors = ex.getBindingResult().getFieldErrors()
-                .stream().map(DefaultMessageSourceResolvable::getDefaultMessage).toList();
-        return new ResponseEntity<>(getBody(HttpStatus.NOT_FOUND, errors.toString()),
-                HttpStatus.NOT_FOUND);
-    }
-
-    @ExceptionHandler(EntityNotFoundException.class)
-    public final ResponseEntity<Object> handleNotFoundEntityException(Exception ex) {
-        return new ResponseEntity<>(getBody(HttpStatus.NOT_FOUND, ex.getMessage())
-                , HttpStatus.NOT_FOUND);
+                .stream().map(DefaultMessageSourceResolvable::getDefaultMessage).collect(Collectors.toList());
+        return new ResponseEntity<>(getBody(HttpStatus.BAD_REQUEST, errors),
+                HttpStatus.BAD_REQUEST);
     }
     @Override
     protected ResponseEntity<Object> handleHttpMessageNotReadable(HttpMessageNotReadableException ex,
@@ -46,9 +41,14 @@ public class GlobalControllerAdvice extends ResponseEntityExceptionHandler {
         return new ResponseEntity<>(getBody(HttpStatus.BAD_REQUEST,message),
                 HttpStatus.BAD_REQUEST);
     }
+    @ExceptionHandler(EntityNotFoundException.class)
+    public final ResponseEntity<Object> handleNotFoundEntityException(Exception ex) {
+        return new ResponseEntity<>(getBody(HttpStatus.NOT_FOUND, ex.getMessage())
+                , HttpStatus.NOT_FOUND);
+    }
 
 
-    private Map<Object, Object> getBody(HttpStatus status, String message) {
+    private Map<Object, Object> getBody(HttpStatus status, Object message) {
         Map<Object, Object> body = new LinkedHashMap<>();
         body.put("timestamp", Instant.now());
         body.put("status", status.value());
